Install context.py as a script

--- a/koji/Makefile
+++ b/koji/Makefile
@@ -1,6 +1,7 @@
 PYTHON=python
 PACKAGE = $(shell basename `pwd`)
 PYFILES = $(wildcard *.py)
+PYSCRIPTS = context.py
 PYVER := $(shell $(PYTHON) -c 'import sys; print "%.3s" %(sys.version)')
 PYSYSDIR := $(shell $(PYTHON) -c 'import sys; print sys.prefix')
 PYLIBDIR = $(PYSYSDIR)/lib/python$(PYVER)
@@ -16,5 +17,8 @@ install:
 	mkdir -p $(DESTDIR)/$(PKGDIR)
 	for p in $(PYFILES) ; do \
 		install -m 644 $$p $(DESTDIR)/$(PKGDIR)/$$p; \
+	done
+	for p in $(PYSCRIPTS) ; do \
+		chmod 0755 $(DESTDIR)/$(PKGDIR)/$$p; \
 	done
 	$(PYTHON) -c "import compileall; compileall.compile_dir('$(DESTDIR)/$(PKGDIR)', 1, '$(PYDIR)', 1)"
