Move web content from /var/www to /usr/share

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -2,10 +2,10 @@
 # koji-hub is an xmlrpc interface to the Koji database
 #
 
-Alias /kojihub "/var/www/koji-hub/XMLRPC"
-Alias /koji-hub "/var/www/koji-hub/XMLRPC"
+Alias /kojihub "/usr/share/koji-hub/XMLRPC"
+Alias /koji-hub "/usr/share/koji-hub/XMLRPC"
 
-<Directory /var/www/koji-hub>
+<Directory /usr/share/koji-hub>
         SetHandler mod_python
         PythonHandler kojixmlrpc
         PythonOption DBName koji
