--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -1,6 +1,6 @@
-Alias /koji "/var/www/koji-web/scripts/"
+Alias /koji "/usr/share/koji-web/scripts/"
 
-<Directory "/var/www/koji-web/scripts/">
+<Directory "/usr/share/koji-web/scripts/">
     # Config for the publisher handler
     SetHandler mod_python
     PythonHandler mod_python.publisher
@@ -16,7 +16,7 @@ Alias /koji "/var/www/koji-web/scripts/"
     PythonOption LoginTimeout 72
     # This must be changed before deployment
     PythonOption Secret CHANGE_ME
-    PythonPath "sys.path + ['/var/www/koji-web/lib']"
+    PythonPath "sys.path + ['/usr/share/koji-web/lib']"
     PythonCleanupHandler kojiweb.handlers::cleanup
     PythonAutoReload Off
 </Directory>
@@ -35,9 +35,9 @@ Alias /koji "/var/www/koji-web/scripts/"
     ErrorDocument 401 /koji-static/errors/unauthorized.html
 </Location>
 
-Alias /koji-static/ "/var/www/koji-web/static/"
+Alias /koji-static/ "/usr/share/koji-web/static/"
 
-<Directory "/var/www/koji-web/static/">
+<Directory "/usr/share/koji-web/static/">
     Options None
     AllowOverride None
     Order allow,deny
