--- a/hub/Makefile
+++ b/hub/Makefile
@@ -23,11 +23,11 @@ install:
 	fi
 
 	mkdir -p $(DESTDIR)/etc/httpd/conf.d
-	install -m 644 httpd.conf $(DESTDIR)/etc/httpd/conf.d/kojihub.conf
+	install -p -m 644 httpd.conf $(DESTDIR)/etc/httpd/conf.d/kojihub.conf
 
 	mkdir -p $(DESTDIR)/$(SERVERDIR)
 	for p in $(PYFILES) ; do \
-		install -m 644 $$p $(DESTDIR)/$(SERVERDIR)/$$p; \
+		install -p -m 644 $$p $(DESTDIR)/$(SERVERDIR)/$$p; \
 	done
 	$(PYTHON) -c "import compileall; compileall.compile_dir('$(DESTDIR)/$(SERVERDIR)', 1, '$(PYDIR)', 1)"
 
