--- a/util/Makefile
+++ b/util/Makefile
@@ -13,12 +13,12 @@ install:
 		exit 1; \
 	fi
 	mkdir -p $(DESTDIR)/usr/sbin
-	install -m 755 $(BINFILES) $(DESTDIR)/usr/sbin
+	install -p -m 755 $(BINFILES) $(DESTDIR)/usr/sbin
 
 	mkdir -p $(DESTDIR)/etc/rc.d/init.d
-	install -m 755 kojira.init $(DESTDIR)/etc/rc.d/init.d/kojira
+	install -p -m 755 kojira.init $(DESTDIR)/etc/rc.d/init.d/kojira
 
 	mkdir -p $(DESTDIR)/etc/sysconfig
-	install -m 644 kojira.sysconfig $(DESTDIR)/etc/sysconfig/kojira
+	install -p -m 644 kojira.sysconfig $(DESTDIR)/etc/sysconfig/kojira
 
-	install -m 644 kojira.conf $(DESTDIR)/etc/kojira.conf
+	install -p -m 644 kojira.conf $(DESTDIR)/etc/kojira.conf
