--- a/www/kojiweb/includes/Makefile
+++ b/www/kojiweb/includes/Makefile
@@ -15,4 +15,4 @@ install:
 	fi
 
 	mkdir -p $(DESTDIR)/$(SERVERDIR)
-	install -m 644 $(FILES) $(DESTDIR)/$(SERVERDIR)
+	install -p -m 644 $(FILES) $(DESTDIR)/$(SERVERDIR)
