--- a/www/static/errors/Makefile
+++ b/www/static/errors/Makefile
@@ -15,4 +15,4 @@ install:
 	fi
 
 	mkdir -p $(DESTDIR)/$(SERVERDIR)
-	install -m 644 $(FILES) $(DESTDIR)/$(SERVERDIR)
+	install -p -m 644 $(FILES) $(DESTDIR)/$(SERVERDIR)
