Set vendor, packager and _host for mock config.

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -20,5 +20,15 @@
 ; The user to run as when doing builds
 ; mockuser=kojibuilder
 
+; The vendor to use in rpm headers
+; vendor=koji
+
+; The packager to use in rpm headers
+; packager=koji
+
+; The _host string to use in mock
+; mockhost=
+
+
 ; The URL for the xmlrpc server
 server=http://hub.example.com/kojihub
