enable authentication from the cli via SSL client certificates

--- a/cli/koji.conf
+++ b/cli/koji.conf
@@ -11,3 +11,13 @@
 ;path to the koji top directory
 ;topdir = /mnt/koji
 
+;configuration for SSL athentication
+
+;client certificate
+;cert = ~/.koji/client.crt
+
+;certificate of the CA that issued the client certificate
+;ca = ~/.koji/clientca.crt
+
+;certificate of the CA that issued the HTTP server certificate
+;serverca = ~/.koji/serverca.crt
