--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -15,6 +15,7 @@ Alias /koji-hub "/usr/share/koji-hub/XMLRPC"
         PythonOption AuthPrincipal kojihub@EXAMPLE.COM
         PythonOption AuthKeytab /etc/koji.keytab
         PythonOption ProxyPrincipals kojihub@EXAMPLE.COM
+        PythonOption LoginCreatesUser On
         PythonOption KojiWebURL http://kojiweb.example.com/koji
         #format string for host principals (%s = hostname)
         PythonOption HostPrincipalFormat %s@EXAMPLE.COM
@@ -26,3 +27,10 @@ Alias /koji-hub "/usr/share/koji-hub/XMLRPC"
         #autoreload is mostly useless to us (it would only reload kojixmlrpc.py)
 </Directory>
 
+# uncomment this to enable authentication via SSL client certificates
+# <Location /kojihub>
+#         SSLVerifyClient require
+#         SSLVerifyDepth  10
+#         SSLUserName SSL_CLIENT_S_DN_CN
+#         SSLOptions +StdEnvVars +ExportCertData
+# </Location>
