--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -32,3 +32,14 @@
 
 ; The URL for the xmlrpc server
 server=http://hub.example.com/kojihub
+
+;configuration for SSL athentication
+
+;client certificate
+;cert = /etc/kojid/client.crt
+
+;certificate of the CA that issued the client certificate
+;ca = /etc/kojid/clientca.crt
+
+;certificate of the CA that issued the HTTP server certificate
+;serverca = /etc/kojid/serverca.crt
