enable SSL client certificate authentication for kojira

--- a/util/kojira.conf
+++ b/util/kojira.conf
@@ -20,3 +20,14 @@ logfile=/var/log/kojira.log
 
 ; Include srpms in repos? (not needed for normal operation)
 with_src=no
+
+;configuration for SSL athentication
+
+;client certificate
+;cert = /etc/kojira/client.crt
+
+;certificate of the CA that issued the client certificate
+;ca = /etc/kojira/clientca.crt
+
+;certificate of the CA that issued the HTTP server certificate
+;serverca = /etc/kojira/serverca.crt
