--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -13,6 +13,9 @@ Alias /koji "/usr/share/koji-web/scripts/"
     PythonOption WebPrincipal koji/web@EXAMPLE.COM
     PythonOption WebKeytab /etc/httpd.keytab
     PythonOption WebCCache /var/tmp/kojiweb.ccache
+    PythonOption WebCert /etc/kojiweb/kojiweb.crt
+    PythonOption ClientCA /etc/kojiweb/clientca.crt
+    PythonOption KojiHubCA /etc/kojiweb/kojihubca.crt
     PythonOption LoginTimeout 72
     # This must be changed before deployment
     PythonOption Secret CHANGE_ME
@@ -21,18 +24,25 @@ Alias /koji "/usr/share/koji-web/scripts/"
     PythonAutoReload Off
 </Directory>
 
-# Authentication settings
+# uncomment this to enable authentication via Kerberos
+# <Location /koji/login>
+#     AuthType Kerberos
+#     AuthName "Koji Web UI"
+#     KrbMethodNegotiate on
+#     KrbMethodK5Passwd off
+#     KrbServiceName HTTP
+#     KrbAuthRealm EXAMPLE.COM
+#     Krb5Keytab /etc/httpd.keytab
+#     KrbSaveCredentials off
+#     Require valid-user
+#     ErrorDocument 401 /koji-static/errors/unauthorized.html
+# </Location>
+
+# uncomment this to enable authentication via SSL client certificates
 <Location /koji/login>
-    AuthType Kerberos
-    AuthName "Koji Web UI"
-    KrbMethodNegotiate on
-    KrbMethodK5Passwd off
-    KrbServiceName HTTP
-    KrbAuthRealm EXAMPLE.COM
-    Krb5Keytab /etc/httpd.keytab
-    KrbSaveCredentials off
-    Require valid-user
-    ErrorDocument 401 /koji-static/errors/unauthorized.html
+        SSLVerifyClient require
+        SSLVerifyDepth  10
+        SSLOptions +StdEnvVars
 </Location>
 
 Alias /koji-static/ "/usr/share/koji-web/static/"
