--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -15,6 +15,8 @@ Alias /koji-hub "/usr/share/koji-hub/XMLRPC"
         PythonOption AuthPrincipal kojihub@EXAMPLE.COM
         PythonOption AuthKeytab /etc/koji.keytab
         PythonOption ProxyPrincipals kojihub@EXAMPLE.COM
+        # separate multiple DNs with |
+        PythonOption ProxyDNs "/C=US/ST=Massachusetts/O=Example Org/OU=Example User/CN=example/emailAddress=example@example.com"
         PythonOption LoginCreatesUser On
         PythonOption KojiWebURL http://kojiweb.example.com/koji
         #format string for host principals (%s = hostname)
@@ -32,5 +34,5 @@ Alias /koji-hub "/usr/share/koji-hub/XMLRPC"
 #         SSLVerifyClient require
 #         SSLVerifyDepth  10
 #         SSLUserName SSL_CLIENT_S_DN_CN
-#         SSLOptions +StdEnvVars +ExportCertData
+#         SSLOptions +StdEnvVars
 # </Location>
