--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -15,6 +15,8 @@ Alias /koji-hub "/usr/share/koji-hub/XMLRPC"
         PythonOption AuthPrincipal kojihub@EXAMPLE.COM
         PythonOption AuthKeytab /etc/koji.keytab
         PythonOption ProxyPrincipals kojihub@EXAMPLE.COM
+        # the client username is the common name of the subject of their client certificate     
+        PythonOptions DNUsernameComponent CN
         # separate multiple DNs with |
         PythonOption ProxyDNs "/C=US/ST=Massachusetts/O=Example Org/OU=Example User/CN=example/emailAddress=example@example.com"
         PythonOption LoginCreatesUser On
@@ -33,6 +35,5 @@ Alias /koji-hub "/usr/share/koji-hub/XMLRPC"
 # <Location /kojihub>
 #         SSLVerifyClient require
 #         SSLVerifyDepth  10
-#         SSLUserName SSL_CLIENT_S_DN_CN
 #         SSLOptions +StdEnvVars
 # </Location>
