--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -16,7 +16,7 @@ Alias /koji-hub "/usr/share/koji-hub/XMLRPC"
         PythonOption AuthKeytab /etc/koji.keytab
         PythonOption ProxyPrincipals kojihub@EXAMPLE.COM
         # the client username is the common name of the subject of their client certificate     
-        PythonOptions DNUsernameComponent CN
+        PythonOption DNUsernameComponent CN
         # separate multiple DNs with |
         PythonOption ProxyDNs "/C=US/ST=Massachusetts/O=Example Org/OU=Example User/CN=example/emailAddress=example@example.com"
         PythonOption LoginCreatesUser On
