- make client certificate config global (in ssl.conf) to avoid SSL renegotiation and buffer overruns caused by it - reorganize auth config in kojihub.conf - don't set krb_principal for new hosts unless HostPrincipalFormat is set

--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -39,11 +39,12 @@ Alias /koji "/usr/share/koji-web/scripts/"
 # </Location>
 
 # uncomment this to enable authentication via SSL client certificates
-<Location /koji/login>
-        SSLVerifyClient require
-        SSLVerifyDepth  10
-        SSLOptions +StdEnvVars
-</Location>
+# <Location /koji/login>
+#     SSLOptions +StdEnvVars
+# </Location>
+# these options must be enabled globally (in ssl.conf)
+# SSLVerifyClient require
+# SSLVerifyDepth  10
 
 Alias /koji-static/ "/usr/share/koji-web/static/"
 
