- fix koji mock-config to use sensible defaults for **opts - add --topurl option to koji mock-config - upload in 64k chunks in incrementalUpload - best-effort to check when mock has truncated a file and started writing from 0 in BuildRoot.mock() - improvements to cmdline parsing in koji call

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -21,13 +21,13 @@
 ; mockuser=kojibuilder
 
 ; The vendor to use in rpm headers
-; vendor=koji
+; vendor=Koji
 
 ; The packager to use in rpm headers
-; packager=koji
+; packager=Koji
 
 ; The _host string to use in mock
-; mockhost=
+; mockhost=koji-linux-gnu
 
 
 ; The URL for the xmlrpc server
