do not allow users to manually specify their notification email address, construct it from their username and the "EmailDomain" option

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -29,6 +29,9 @@ Alias /kojihub "/usr/share/koji-hub/XMLRPC"
 
         PythonOption LoginCreatesUser On
         PythonOption KojiWebURL http://kojiweb.example.com/koji
+        # The domain name that will be appended to Koji usernames
+        # when creating email notifications
+        PythonOption EmailDomain example.org
         # PythonOption KojiDebug On
         # PythonOption KojiTraceback "extended"
         # sending tracebacks to the client isn't very helpful for debugging xmlrpc
