make email notifications work   - always send notifications to the build submitter and the package owner   - default smtphost in kojid.conf

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -29,9 +29,12 @@
 ; The _host string to use in mock
 ; mockhost=koji-linux-gnu
 
-
 ; The URL for the xmlrpc server
 server=http://hub.example.com/kojihub
+
+; The mail host to use for sending email notifications
+smtphost=example.com
+
 
 ;configuration for SSL athentication
 
