--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -31,7 +31,7 @@ Alias /kojihub "/usr/share/koji-hub/XMLRPC"
         PythonOption KojiWebURL http://kojiweb.example.com/koji
         # The domain name that will be appended to Koji usernames
         # when creating email notifications
-        PythonOption EmailDomain example.org
+        PythonOption EmailDomain example.com
         # PythonOption KojiDebug On
         # PythonOption KojiTraceback "extended"
         # sending tracebacks to the client isn't very helpful for debugging xmlrpc
