set a default for from_addr in kojid.conf

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -35,6 +35,8 @@ server=http://hub.example.com/kojihub
 ; The mail host to use for sending email notifications
 smtphost=example.com
 
+; The From address used when sending email notifications
+from_addr=Koji Build System <buildsys@example.com>
 
 ;configuration for SSL athentication
 
