--- a/cli/koji.conf
+++ b/cli/koji.conf
@@ -8,6 +8,9 @@
 ;url of web interface
 ;weburl = http://www.example.com/koji
 
+;url of package download site
+;pkgurl = http://www.example.com/packages
+
 ;path to the koji top directory
 ;topdir = /mnt/koji
 
