use koji.fp.o in config

--- a/util/koji-gc.conf
+++ b/util/koji-gc.conf
@@ -9,6 +9,8 @@ key_aliases =
 unprotected_keys =
     fedora-test
 
+server = https://koji.fedoraproject.org/kojihub/
+
 [prune]
 policy =
     #stuff to protect
