add some key aliases. Handle lowercase hex ids in config.

--- a/util/koji-gc.conf
+++ b/util/koji-gc.conf
@@ -5,9 +5,13 @@
 key_aliases =
     30C9ECF8    fedora-test
     4F2A6FD2    fedora-gold
+    897DA07A    redhat-beta
+    1AC70CE6    fedora-extras
 
 unprotected_keys =
     fedora-test
+    fedora-extras
+    redhat-beta
 
 server = https://koji.fedoraproject.org/kojihub/
 
@@ -18,7 +22,7 @@ policy =
     tag *-updates :: keep
     age < 1 day :: skip
     sig fedora-gold :: skip
-    sig beta fedora-test && age < 12 weeks :: keep
+    sig fedora-test && age < 12 weeks :: keep
 
     #stuff to chuck semi-rapidly
     tag *-testing *-candidate && order >= 2 :: untag
