add weburl option to config

--- a/util/koji-gc.conf
+++ b/util/koji-gc.conf
@@ -13,7 +13,8 @@ unprotected_keys =
     fedora-extras
     redhat-beta
 
-server = https://koji.fedoraproject.org/kojihub/
+server = https://koji.fedoraproject.org/kojihub
+weburl = http://koji.fedoraproject.org/koji
 
 [prune]
 policy =
