Initial stab at no longer doing hardlinks in repo creation.
Create a filelist of packages to include in the repo
Use this filelist with createrepo and a baseurl to create
the repodata.  Add a config option for pkgurl where the packages
can be found via http.

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -32,6 +32,9 @@
 ; The URL for the xmlrpc server
 server=http://hub.example.com/kojihub
 
+; The URL for the packages tree
+pkgurl=http://hub.example.com/packages
+
 ; The mail host to use for sending email notifications
 smtphost=example.com
 
