add the "allowed_scms" kojid parameter: a whitelist of hostname:repository tuples that kojid is allowed to checkout from

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -35,6 +35,9 @@ server=http://hub.example.com/kojihub
 ; The URL for the packages tree
 pkgurl=http://hub.example.com/packages
 
+; A space-separated list of hostname:repository pairs that kojid is authorized to checkout from (no quotes)
+allowed_scms=scm.example.com:/cvs/example git.example.org:/example
+
 ; The mail host to use for sending email notifications
 smtphost=example.com
 
