allow use of wildcards in the allowed_scms config parameter

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -36,7 +36,8 @@ server=http://hub.example.com/kojihub
 pkgurl=http://hub.example.com/packages
 
 ; A space-separated list of hostname:repository pairs that kojid is authorized to checkout from (no quotes)
-allowed_scms=scm.example.com:/cvs/example git.example.org:/example
+; Wildcards (as supported by fnmatch) are allowed
+allowed_scms=scm.example.com:/cvs/example git.example.org:/example svn.example.org:/users/*
 
 ; The mail host to use for sending email notifications
 smtphost=example.com
