policy framework and tagging policies

--- a/util/koji-gc.conf
+++ b/util/koji-gc.conf
@@ -26,8 +26,10 @@ policy =
     sig fedora-test && age < 12 weeks :: keep
 
     #stuff to chuck semi-rapidly
-    tag *-testing *-candidate && order >= 2 :: untag
-    tag *-testing *-candidate && order > 0 && age > 6 weeks :: untag
+    tag *-testing *-candidate :: {  # nested rules
+        order >= 2 :: untag
+        order > 0 && age > 6 weeks :: untag
+    }  #closing braces must be on a line by themselves (modulo comments/whitespace)
     tag *-candidate && age > 60 weeks :: untag
 
     #default: keep the last 3
