hub config file, hander registry
- use a hub config file instead of PythonOptions
- now honors KojiDir
- scan for handlers once at startup instead of each call

--- a/hub/Makefile
+++ b/hub/Makefile
@@ -25,6 +25,9 @@ install:
 	mkdir -p $(DESTDIR)/etc/httpd/conf.d
 	install -p -m 644 httpd.conf $(DESTDIR)/etc/httpd/conf.d/kojihub.conf
 
+	mkdir -p $(DESTDIR)/etc/koji-hub
+	install -p -m 644 hub.conf $(DESTDIR)/etc/koji-hub/hub.conf
+
 	mkdir -p $(DESTDIR)/$(SERVERDIR)
 	for p in $(PYFILES) ; do \
 		install -p -m 644 $$p $(DESTDIR)/$(SERVERDIR)/$$p; \
