patch from Toshio adding support to use passwd auth for database connection.

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -10,6 +10,7 @@ Alias /kojihub "/usr/share/koji-hub/XMLRPC"
         PythonOption DBName koji
         PythonOption DBUser koji
         PythonOption DBHost db.example.com
+        PythonOption DBPass example_password
         PythonOption KojiDir /mnt/koji
 
         # Kerberos auth configuration
