basic plugin support for hub and builders

--- a/builder/Makefile
+++ b/builder/Makefile
@@ -1,4 +1,5 @@
 
+SUBDIRS = lib
 BINFILES = kojid
 PYFILES = $(wildcard *.py)
 
@@ -7,6 +8,8 @@ _default:
 
 clean:
 	rm -f *.o *.so *.pyc *~
+	for d in $(SUBDIRS); do make -s -C $$d clean; done
+
 
 install:
 	@if [ "$(DESTDIR)" = "" ]; then \
@@ -27,3 +30,7 @@ install:
 
 	mkdir -p $(DESTDIR)/etc/kojid
 	install -p -m 644 kojid.conf $(DESTDIR)/etc/kojid/kojid.conf
+
+	for d in $(SUBDIRS); do make DESTDIR=`cd $(DESTDIR); pwd` \
+		-C $$d install; [ $$? = 0 ] || exit 1; done
+
