add download urls for Maven artifacts

--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -10,6 +10,8 @@ Alias /koji "/usr/share/koji-web/scripts/"
     PythonOption KojiHubURL http://hub.example.com/kojihub
     PythonOption KojiWebURL http://www.example.com/koji
     PythonOption KojiPackagesURL http://server.example.com/mnt/koji/packages
+    PythonOption KojiMavenURL http://server.example.com/mnt/koji/maven2
+    PythonOption KojiArchiveURL http://server.example.com/mnt/koji/archives
     PythonOption WebPrincipal koji/web@EXAMPLE.COM
     PythonOption WebKeytab /etc/httpd.keytab
     PythonOption WebCCache /var/tmp/kojiweb.ccache
