--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -37,7 +37,7 @@ pkgurl=http://hub.example.com/packages
 
 ; A space-separated list of hostname:repository[:use_common] tuples that kojid is authorized to checkout from (no quotes).
 ; Wildcards (as supported by fnmatch) are allowed.
-; If use_common is specified and is one of "false", "no", or "0" (without quotes), then kojid will not attempt to checkout
+; If use_common is specified and is one of "false", "no", "off", or "0" (without quotes), then kojid will not attempt to checkout
 ; a common/ dir when checking out sources from the source control system.  Otherwise, it will attempt to checkout a common/
 ; dir, and will raise an exception if it cannot.
 allowed_scms=scm.example.com:/cvs/example git.example.org:/example svn.example.org:/users/*:no
