--- a/hub/hub.conf
+++ b/hub/hub.conf
@@ -3,7 +3,7 @@
 ## Basic options ##
 DBName = koji
 DBUser = koji
-DBHost = db.example.com
+#DBHost = db.example.com
 #DBPass = example_password
 KojiDir = /mnt/koji
 
@@ -37,10 +37,11 @@ LoginCreatesUser = On
 KojiWebURL = http://kojiweb.example.com/koji
 # The domain name that will be appended to Koji usernames
 # when creating email notifications
-#EmailDomain example.com
+#EmailDomain = example.com
 
-## Whether or not to report exception details for anticipated errors (i.e.
-## koji's own exceptions -- subclasses of koji.GenericError).
+## If KojiDebug is on, the hub will be /very/ verbose and will report exception
+## details to clients for anticipated errors (i.e. koji's own exceptions --
+## subclasses of koji.GenericError).
 # KojiDebug = On
 
 ## Determines how much detail about exceptions is reported to the client (via faults)
