--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -7,6 +7,7 @@ Alias /koji "/usr/share/koji-web/scripts/"
 
     # General settings
     PythonDebug On
+    PythonOption SiteName Koji
     PythonOption KojiHubURL http://hub.example.com/kojihub
     PythonOption KojiPackagesURL http://server.example.com/mnt/koji/packages
     PythonOption WebPrincipal koji/web@EXAMPLE.COM
