--- a/hub/hub.conf
+++ b/hub/hub.conf
@@ -38,6 +38,8 @@ KojiWebURL = http://kojiweb.example.com/koji
 # The domain name that will be appended to Koji usernames
 # when creating email notifications
 #EmailDomain = example.com
+# weather to send the task owner and package owner email or not on success.  this still goes to watchers
+NotifyOnSuccess = True
 
 ## If KojiDebug is on, the hub will be /very/ verbose and will report exception
 ## details to clients for anticipated errors (i.e. koji's own exceptions --
