set %distribution the same way we set %vendor and %packager

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -26,6 +26,9 @@
 ; The packager to use in rpm headers
 ; packager=Koji
 
+; The distribution to use in rpm headers
+; distribution=Koji
+
 ; The _host string to use in mock
 ; mockhost=koji-linux-gnu
 
