set the PythonHandler name to be compatible with Fedora and RHEL-5+

--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -3,7 +3,7 @@ Alias /koji "/usr/share/koji-web/scripts/"
 <Directory "/usr/share/koji-web/scripts/">
     # Config for the publisher handler
     SetHandler mod_python
-    PythonHandler publisher
+    PythonHandler mod_python.publisher
 
     # General settings
     PythonDebug On
