use kojiweb.publisher

--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -3,7 +3,9 @@ Alias /koji "/usr/share/koji-web/scripts/"
 <Directory "/usr/share/koji-web/scripts/">
     # Config for the publisher handler
     SetHandler mod_python
-    PythonHandler mod_python.publisher
+    # Use kojiweb's publisher (which handles errors more gracefully)
+    # You can also use mod_python.publisher, but you will lose the pretty tracebacks
+    PythonHandler kojiweb.publisher
 
     # General settings
     PythonDebug On
