replace configuration in kojihub.conf with a reference to hub.conf

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -7,35 +7,9 @@ Alias /kojihub "/usr/share/koji-hub/XMLRPC"
 <Directory /usr/share/koji-hub>
         SetHandler mod_python
         PythonHandler kojixmlrpc
-        PythonOption DBName koji
-        PythonOption DBUser koji
-        PythonOption DBHost db.example.com
-        PythonOption DBPass example_password
-        PythonOption KojiDir /mnt/koji
 
-        # Kerberos auth configuration
-        # PythonOption AuthPrincipal kojihub@EXAMPLE.COM
-        # PythonOption AuthKeytab /etc/koji.keytab
-        # PythonOption ProxyPrincipals kojihub@EXAMPLE.COM
-        # format string for host principals (%s = hostname)
-        # PythonOption HostPrincipalFormat compile/%s@EXAMPLE.COM
-        # end Kerberos auth configuration
+        PythonOption ConfigFile /etc/koji-hub/hub.conf
 
-        # SSL client certificate auth configuration
-        # the client username is the common name of the subject of their client certificate     
-        # PythonOption DNUsernameComponent CN
-        # separate multiple DNs with |
-        # PythonOption ProxyDNs "/C=US/ST=Massachusetts/O=Example Org/OU=Example User/CN=example/emailAddress=example@example.com"
-        # end SSL client certificate auth configuration
-
-        PythonOption LoginCreatesUser On
-        PythonOption KojiWebURL http://kojiweb.example.com/koji
-        # The domain name that will be appended to Koji usernames
-        # when creating email notifications
-        PythonOption EmailDomain example.com
-        # PythonOption KojiDebug On
-        # PythonOption KojiTraceback "extended"
-        # sending tracebacks to the client isn't very helpful for debugging xmlrpc
         PythonDebug Off
         # autoreload is mostly useless to us (it would only reload kojixmlrpc.py)
         PythonAutoReload Off
