enable creation of LiveCD/DVD images in Koji
Signed-off-by: Mike Bonnet <mikeb@redhat.com>

--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -12,6 +12,7 @@ Alias /koji "/usr/share/koji-web/scripts/"
     PythonOption SiteName Koji
     PythonOption KojiHubURL http://hub.example.com/kojihub
     PythonOption KojiPackagesURL http://server.example.com/mnt/koji/packages
+    PythonOption KojiImagesURL http://server.example.com/mnt/koji/images
     PythonOption WebPrincipal koji/web@EXAMPLE.COM
     PythonOption WebKeytab /etc/httpd.keytab
     PythonOption WebCCache /var/tmp/kojiweb.ccache
