add a couple more parameters to the example hub.conf

--- a/hub/hub.conf
+++ b/hub/hub.conf
@@ -38,8 +38,16 @@ KojiWebURL = http://kojiweb.example.com/koji
 # The domain name that will be appended to Koji usernames
 # when creating email notifications
 #EmailDomain = example.com
-# weather to send the task owner and package owner email or not on success.  this still goes to watchers
+# whether to send the task owner and package owner email or not on success.  this still goes to watchers
 NotifyOnSuccess = True
+## Disables all notifications
+# DisableNotifications = False
+
+## Koji hub plugins
+## The path where plugins are found
+# PluginPath = /usr/lib/koji-hub-plugins
+## A space-separated list of plugins to load
+# Plugins = echo
 
 ## If KojiDebug is on, the hub will be /very/ verbose and will report exception
 ## details to clients for anticipated errors (i.e. koji's own exceptions --
