fix a spelling error (rhbz 529208)

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -51,7 +51,7 @@ smtphost=example.com
 ; The From address used when sending email notifications
 from_addr=Koji Build System <buildsys@example.com>
 
-;configuration for SSL athentication
+;configuration for SSL authentication
 
 ;client certificate
 ;cert = /etc/kojid/client.crt
