--- a/cli/koji.conf
+++ b/cli/koji.conf
@@ -14,7 +14,7 @@
 ;path to the koji top directory
 ;topdir = /mnt/koji
 
-;configuration for SSL athentication
+;configuration for SSL authentication
 
 ;client certificate
 ;cert = ~/.koji/client.crt
