--- a/util/kojira.conf
+++ b/util/kojira.conf
@@ -21,7 +21,7 @@ logfile=/var/log/kojira.log
 ; Include srpms in repos? (not needed for normal operation)
 with_src=no
 
-;configuration for SSL athentication
+;configuration for SSL authentication
 
 ;client certificate
 ;cert = /etc/kojira/client.crt
