declare our own exchange, rather than using the builtin amq.topic exchange

--- a/plugins/messagebus.conf
+++ b/plugins/messagebus.conf
@@ -8,6 +8,11 @@ auth = PLAIN
 username = guest
 password = guest
 
+[exchange]
+name = koji.events
+type = topic
+durable = true
+
 [queues]
 prefix = koji.event
 
