append "/ssllogin" to the hub URL when logging in via SSL, so we only need to require client certificates on that specific URL

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -16,9 +16,8 @@ Alias /kojihub "/usr/share/koji-hub/XMLRPC"
 </Directory>
 
 # uncomment this to enable authentication via SSL client certificates
-# <Location /kojihub>
+# <Location /kojihub/ssllogin>
+#         SSLVerifyClient require
+#         SSLVerifyDepth  10
 #         SSLOptions +StdEnvVars
 # </Location>
-# these options must be enabled globally (in ssl.conf)
-# SSLVerifyClient require
-# SSLVerifyDepth  10
