provide example ssl config to support koji < 1.4.0 clients

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -21,3 +21,11 @@ Alias /kojihub "/usr/share/koji-hub/XMLRPC"
 #         SSLVerifyDepth  10
 #         SSLOptions +StdEnvVars
 # </Location>
+
+# If you need to support koji < 1.4.0 clients using SSL authentication, then use the following instead:
+# <Location /kojihub>
+#         SSLOptions +StdEnvVars
+# </Location>
+# In this case, you will need to enable these options globally (in ssl.conf):
+# SSLVerifyClient require
+# SSLVerifyDepth  10
