- update the interface between the kojivmd and kojikamid  - allow --specfile and --patches to be passed to the VM  - handle validation of urls in kojivmd

--- a/vm/kojivmd.conf
+++ b/vm/kojivmd.conf
@@ -17,6 +17,13 @@
 ; The URL for the xmlrpc server
 server=http://hub.example.com/kojihub
 
+; A space-separated list of hostname:repository[:use_common] tuples that kojivmd is authorized to checkout from (no quotes).
+; Wildcards (as supported by fnmatch) are allowed.
+; If use_common is specified and is one of "false", "no", "off", or "0" (without quotes), then kojid will not attempt to checkout
+; a common/ dir when checking out sources from the source control system.  Otherwise, it will attempt to checkout a common/
+; dir, and will raise an exception if it cannot.
+allowed_scms=scm.example.com:/cvs/example git.example.org:/example svn.example.org:/users/*:no
+
 ; The mail host to use for sending email notifications
 smtphost=example.com
 
