support for retrieving buildrequires

--- a/vm/kojivmd.conf
+++ b/vm/kojivmd.conf
@@ -14,6 +14,9 @@
 ; The directory root for temporary storage
 ; workdir=/tmp/koji
 
+; The url where the Koji root directory (/mnt/koji) can be accessed
+topurl=http://koji.example.com/kojiroot
+
 ; The URL for the xmlrpc server
 server=http://hub.example.com/kojihub
 
