--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -51,6 +51,18 @@ smtphost=example.com
 ; The From address used when sending email notifications
 from_addr=Koji Build System <buildsys@example.com>
 
+;configuration for Kerberos authentication
+
+;the format of the principal used by the build hosts
+;%s will be replaced by the FQDN of the host
+;host_principal_format = compile/%s@EXAMPLE.COM
+
+;location of the keytab
+;keytab = /etc/kojid/kojid.keytab
+
+;the service name of the principal being used by the hub
+;krbservice = host
+
 ;configuration for SSL authentication
 
 ;client certificate
