support for split storage

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -35,8 +35,8 @@
 ; The URL for the xmlrpc server
 server=http://hub.example.com/kojihub
 
-; The URL for the packages tree
-pkgurl=http://hub.example.com/packages
+; The URL for the file access
+topurl=http://hub.example.com/kojifiles
 
 ; A space-separated list of hostname:repository[:use_common] tuples that kojid is authorized to checkout from (no quotes).
 ; Wildcards (as supported by fnmatch) are allowed.
