--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -3,6 +3,7 @@
 #
 
 Alias /kojihub "/usr/share/koji-hub/XMLRPC"
+Alias /kojifiles "/mnt/koji/"
 
 <Directory /usr/share/koji-hub>
         SetHandler mod_python
@@ -13,6 +14,13 @@ Alias /kojihub "/usr/share/koji-hub/XMLRPC"
         PythonDebug Off
         # autoreload is mostly useless to us (it would only reload kojixmlrpc.py)
         PythonAutoReload Off
+</Directory>
+
+<Directory "/mnt/koji">
+    Options Indexes
+    AllowOverride None
+    Order allow,deny
+    Allow from all
 </Directory>
 
 # uncomment this to enable authentication via SSL client certificates
