--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -11,9 +11,7 @@ Alias /koji "/usr/share/koji-web/scripts/"
     PythonDebug On
     PythonOption SiteName Koji
     PythonOption KojiHubURL http://hub.example.com/kojihub
-    PythonOption KojiPackagesURL http://server.example.com/mnt/koji/packages
-    PythonOption KojiMavenURL http://server.example.com/mnt/koji/maven2
-    PythonOption KojiImagesURL http://server.example.com/mnt/koji/images
+    PythonOption KojiFilesURL http://server.example.com/mnt/koji
     PythonOption WebPrincipal koji/web@EXAMPLE.COM
     PythonOption WebKeytab /etc/httpd.keytab
     PythonOption WebCCache /var/tmp/kojiweb.ccache
