better examples for Kerberos auth options
Update the sample values in hub.conf to more closely match the Fedora
wiki page (https://fedoraproject.org/wiki/Koji/ServerHowTo).

--- a/hub/hub.conf
+++ b/hub/hub.conf
@@ -16,9 +16,9 @@ KojiDir = /mnt/koji
 
 ##  Kerberos authentication options  ##
 
-# AuthPrincipal = kojihub@EXAMPLE.COM
+# AuthPrincipal = host/kojihub@EXAMPLE.COM
 # AuthKeytab = /etc/koji.keytab
-# ProxyPrincipals = kojihub@EXAMPLE.COM
+# ProxyPrincipals = koji/kojiweb@EXAMPLE.COM
 ## format string for host principals (%s = hostname)
 # HostPrincipalFormat = compile/%s@EXAMPLE.COM
 
