new approach for web themes

--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -12,6 +12,7 @@ Alias /koji "/usr/share/koji-web/scripts/"
     PythonOption SiteName Koji
     PythonOption KojiHubURL http://hub.example.com/kojihub
     PythonOption KojiFilesURL http://server.example.com/mnt/koji
+    #PythonOption KojiTheme mytheme
     PythonOption WebPrincipal koji/web@EXAMPLE.COM
     PythonOption WebKeytab /etc/httpd.keytab
     PythonOption WebCCache /var/tmp/kojiweb.ccache
