--- a/www/static/themes/Makefile
+++ b/www/static/themes/Makefile
@@ -1,14 +1,11 @@
-SUBDIRS = images errors js themes
-
-SERVERDIR = /usr/share/koji-web/static
-FILES = $(wildcard *.css)
+SERVERDIR = /themes
+FILES = README
 
 _default:
 	@echo "nothing to make.  try make install"
 
 clean:
 	rm -f *.o *.so *.pyc *~
-	for d in $(SUBDIRS); do make -s -C $$d clean; done
 
 install:
 	@if [ "$(DESTDIR)" = "" ]; then \
@@ -19,6 +16,3 @@ install:
 
 	mkdir -p $(DESTDIR)/$(SERVERDIR)
 	install -p -m 644 $(FILES) $(DESTDIR)/$(SERVERDIR)
-
-	for d in $(SUBDIRS); do make DESTDIR=$(DESTDIR)/$(SERVERDIR) \
-		-C $$d install; [ $$? = 0 ] || exit 1; done
