gssapi support in the messagebus plugin

--- a/plugins/messagebus.conf
+++ b/plugins/messagebus.conf
@@ -4,9 +4,14 @@
 host = amqp.example.com
 port = 5671
 ssl = true
+# PLAIN options
 auth = PLAIN
 username = guest
 password = guest
+# GSSAPI options
+# auth = GSSAPI
+# keytab = /etc/koji-hub/plugins/koji-messagebus.keytab
+# principal = messagebus/koji.example.com@EXAMPLE.COM
 
 [exchange]
 name = koji.events
@@ -15,6 +20,3 @@ durable = true
 
 [topic]
 prefix = koji.event
-
-[format]
-encoding=json
