Support wsgi in koji-hub and koji-web  - mod_python still supported, but deprecated  - mod_wsgi is the default  - koji-web now configured via web.conf  - new wsgi-friendly publisher for koji-web  - koji-web now has logging

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -2,19 +2,28 @@
 # koji-hub is an xmlrpc interface to the Koji database
 #
 
-Alias /kojihub "/usr/share/koji-hub/XMLRPC"
-Alias /kojifiles "/mnt/koji/"
+Alias /kojihub /usr/share/koji-hub/kojixmlrpc.py
 
-<Directory /usr/share/koji-hub>
-        SetHandler mod_python
-        PythonHandler kojixmlrpc
-
-        PythonOption ConfigFile /etc/koji-hub/hub.conf
-
-        PythonDebug Off
-        # autoreload is mostly useless to us (it would only reload kojixmlrpc.py)
-        PythonAutoReload Off
+<Directory "/usr/share/koji-hub">
+    Options ExecCGI
+    SetHandler wsgi-script
+    Order allow,deny
+    Allow from all
 </Directory>
+
+# Support for mod_python is DEPRECATED. If you still need mod_python support,
+# then use the following directory settings instead:
+#
+# <Directory "/usr/share/koji-hub">
+#         SetHandler mod_python
+#         PythonHandler kojixmlrpc
+#         PythonOption ConfigFile /etc/koji-hub/hub.conf
+#         PythonDebug Off
+#         PythonAutoReload Off
+# </Directory>
+
+# Also serve /mnt/koji
+Alias /kojifiles "/mnt/koji/"
 
 <Directory "/mnt/koji">
     Options Indexes
