--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -1,32 +1,28 @@
-Alias /koji "/usr/share/koji-web/scripts/"
+#We use wsgi by default
+Alias /koji "/usr/share/koji-web/scripts/wsgi_publisher.py"
+#(configuration goes in /etc/kojiweb/web.conf)
 
 <Directory "/usr/share/koji-web/scripts/">
-    # Config for the publisher handler
-    SetHandler mod_python
-    # Use kojiweb's publisher (which handles errors more gracefully)
-    # You can also use mod_python.publisher, but you will lose the pretty tracebacks
-    PythonHandler kojiweb.publisher
-
-    # General settings
-    PythonDebug On
-    PythonOption SiteName Koji
-    PythonOption KojiHubURL http://hub.example.com/kojihub
-    PythonOption KojiFilesURL http://server.example.com/mnt/koji
-    #PythonOption KojiTheme mytheme
-    PythonOption WebPrincipal koji/web@EXAMPLE.COM
-    PythonOption WebKeytab /etc/httpd.keytab
-    PythonOption WebCCache /var/tmp/kojiweb.ccache
-    PythonOption KrbService host
-    PythonOption WebCert /etc/kojiweb/kojiweb.crt
-    PythonOption ClientCA /etc/kojiweb/clientca.crt
-    PythonOption KojiHubCA /etc/kojiweb/kojihubca.crt
-    PythonOption LoginTimeout 72
-    # This must be changed before deployment
-    PythonOption Secret CHANGE_ME
-    PythonPath "sys.path + ['/usr/share/koji-web/lib']"
-    PythonCleanupHandler kojiweb.handlers::cleanup
-    PythonAutoReload Off
+    Options ExecCGI
+    SetHandler wsgi-script
+    Order allow,deny
+    Allow from all
 </Directory>
+
+# Support for mod_python is DEPRECATED. If you still need mod_python support,
+# then use the following directory settings instead:
+#
+# <Directory "/usr/share/koji-web/scripts/">
+#     # Config for the publisher handler
+#     SetHandler mod_python
+#     # Use kojiweb's publisher (provides wsgi compat layer)
+#     # mod_python's publisher is no longer supported
+#     PythonHandler wsgi_publisher
+#     PythonAutoReload Off
+#     # Configuration via PythonOptions is DEPRECATED. Use /etc/kojiweb/web.conf
+#     Order allow,deny
+#     Allow from all
+# </Directory>
 
 # uncomment this to enable authentication via Kerberos
 # <Location /koji/login>
