adjust web.conf logic

--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -18,6 +18,7 @@ Alias /koji "/usr/share/koji-web/scripts/wsgi_publisher.py"
 #     # Use kojiweb's publisher (provides wsgi compat layer)
 #     # mod_python's publisher is no longer supported
 #     PythonHandler wsgi_publisher
+#     PythonOption koji.web.ConfigFile /etc/kojiweb/web.conf
 #     PythonAutoReload Off
 #     # Configuration via PythonOptions is DEPRECATED. Use /etc/kojiweb/web.conf
 #     Order allow,deny
