allow setting the timeout for builds from config file

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -32,6 +32,9 @@
 ; The _host string to use in mock
 ; mockhost=koji-linux-gnu
 
+; Timeout for build duration (24 hours)
+; rpmbuild_timeout=86400
+
 ; The URL for the xmlrpc server
 server=http://hub.example.com/kojihub
 
