add support for the krbservice and email_domain options to koji-gc

--- a/util/koji-gc.conf
+++ b/util/koji-gc.conf
@@ -16,6 +16,13 @@ unprotected_keys =
 server = https://koji.fedoraproject.org/kojihub
 weburl = http://koji.fedoraproject.org/koji
 
+# The service name of the principal being used by the hub
+#krbservice = host
+
+# The domain name that will be appended to Koji usernames
+# when creating email notifications
+#email_domain = fedoraproject.org
+
 [prune]
 policy =
     #stuff to protect
