add the KrbService option to web.conf

--- a/www/conf/web.conf
+++ b/www/conf/web.conf
@@ -10,6 +10,8 @@ KojiFilesURL = http://server.example.com/kojifiles
 # WebPrincipal = koji/web@EXAMPLE.COM
 # WebKeytab = /etc/httpd.keytab
 # WebCCache = /var/tmp/kojiweb.ccache
+# The service name of the principal being used by the hub
+# KrbService = host
 
 # SSL authentication options
 # WebCert = /etc/kojiweb/kojiweb.crt
