--- a/cli/Makefile
+++ b/cli/Makefile
@@ -16,3 +16,4 @@ install:
 	mkdir -p $(DESTDIR)/usr/bin
 	install -p -m 755 $(FILES) $(DESTDIR)/usr/bin
 	install -p -m 644 koji.conf $(DESTDIR)/etc/koji.conf
+	mkdir -p $(DESTDIR)/etc/koji.conf.d
